--- a/class2.html
+++ b/class2.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="x-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motto</title>
-   
+    <title>Class 3 Activity 2</title>
 </head>
 <body>
+    <button onclick="displayTime()">What time is it?</button>
     <div id="output"></div>
-    <br>
-    <script src="Motto.js"></script>
-    
+    <script src="class2.js"></script>
 </body>
 </html>
