--- a/#GuessingGame/Assignment4.html
+++ b/#GuessingGame/Assignment4.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NumberGuessingGame</title>
+    <link rel="stylesheet" href="Assignment4.css">
 </head>
 <body>
-    <style type="text/css"></style>
-
-    <style>
-        p {
-            color: rgb(4, 46, 46); 
-        }
-        body { 
-            color: rgb(2, 95, 80);
-            background-color: rgb(222, 179, 226);
-        }
+<!--    
+        <div style="background-image: url('NumberBackground.jpg');">
     </style>
 
     <form id="guess-form" name="GuessForm" onsubmit="submitData(); return false">
@@ -32,4 +25,21 @@
     <script src="Assignment4.js"></script>
     
 </body>
-</html>
+</html> -->
+<div class="game">
+    <form id="guess number" class="form" name="guess-form" action="javascript:submitData();">
+    <h1>Guess a number Game!</h1>
+    <p>Please enter a low number and a high number from 1-125</p>
+    <div class="mainform"></div>
+    <label for="min-number">Bottom of range:
+        <input type="text" id="min-number" name="min-number" class="number_field"><br><br></label>
+    <label for="max-number">Top of range:
+        <input type="text" id="max-number" name="max-number" class="number_field top"><br><br></label>
+        
+</div>
+    </form>
+    <div id="output"></div>
+</div>
+<script src="Assignment4.js"> type="text/javascript"</script>
+</body>
+</html> 
