--- a/Form.html
+++ b/Form.html
@@ -1,21 +1,33 @@
-<!-- <form>
-        <form onsubmit="addImage(); return false" name="imageform" id="imageForm"></form>
-        <input type="text" id="imagename" value="" />
-        <input type="button" id="btn" value="GO" /> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Class 3 activity 3</title>
+    <link rel="stylesheet" href="class3.css">
 </head>
 <body>
-    Please insert the url of a web image: <input type="text" name="imageUrl" id="imageUrl">
-    <br>
-    <button type="button" onclick="addImage()">Add image</button>
-    <script src="assignment.js"></script>
+    <form onsubmit="addToList(); return false" name="productForm">
+        <table>
+            <tr>
+                <td>Please enter a product name: </td>
+                <td><input type="text" name="productName"></td>
+            </tr>
+            <tr>
+                <td>Please enter a price: </td>
+                <td><input type="text" name="productPrice"></td>
+            </tr>
+        </table>
+        <button type="submit">Add new item to list</button>
+    </form>
+
+    <table id="userTable">
+        <tr>
+            <th>Product Name</th>
+            <th>Product Price</th>
+        </tr>
+    </table>
+    <script src="class3.js"></script>
 </body>
-</html> 
+</html>
