--- a/#GuessingGame/Assignment4.html
+++ b/#GuessingGame/Assignment4.html
@@ -35,6 +35,8 @@
         <input type="text" id="min-number" name="min-number" class="number_field"><br><br></label>
     <label for="max-number">Top of range:
         <input type="text" id="max-number" name="max-number" class="number_field top"><br><br></label>
+
+        <button id="guess" type="submit" class="button">PlayGame!</button>
         
 </div>
     </form>
